Lab1.0/Code/syntax.output
Terminals unused in grammar

    VOID


State 27 conflicts: 1 shift/reduce
State 36 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier FunDec CompSt
    5       | Specifier SEMI
    6       | Specifier DecList SEMI
    7       | error SEMI

    8 Specifier: TYPE
    9          | StructSpecifier

   10 StructSpecifier: STRUCT OptTag LC DefList RC
   11                | STRUCT Tag

   12 OptTag: ID
   13       | ε

   14 Tag: ID

   15 FunDec: ID LP VarList RP
   16       | ID LP RP
   17       | error RP

   18 VarList: ParamDec COMMA VarList
   19        | ParamDec

   20 ParamDec: Specifier VarDec

   21 CompSt: LC DefList StmtList RC
   22       | error RC

   23 DefList: Def DefList
   24        | ε

   25 Def: Specifier DecList SEMI
   26    | error SEMI

   27 DecList: Dec COMMA DecList
   28        | Dec

   29 Dec: VarDec
   30    | VarDec ASSIGNOP Exp

   31 VarDec: ID
   32       | VarDec LB INT RB
   33       | error RB

   34 StmtList: Stmt StmtList
   35         | ε

   36 Stmt: Exp SEMI
   37     | CompSt
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | RETURN Exp SEMI
   42     | SEMI
   43     | error SEMI

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp OR Exp
   46    | Exp AND Exp
   47    | Exp RELOP Exp
   48    | Exp PLUS Exp
   49    | Exp MINUS Exp
   50    | Exp STAR Exp
   51    | Exp DIV Exp
   52    | LP Exp RP
   53    | MINUS Exp
   54    | NOT Exp
   55    | Exp DOT ID
   56    | ID LP Args RP
   57    | ID LP RP
   58    | Exp LB Exp RB
   59    | ID
   60    | INT
   61    | FLOAT
   62    | error RP
   63    | error RB

   64 Args: Exp COMMA Args
   65     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 17 22 26 33 43 62 63
    TYPE <str_val> (258) 8
    ID <str_val> (259) 12 14 15 16 31 55 56 57 59
    RELOP <str_val> (260) 47
    INT <int_val> (261) 32 60
    FLOAT <float_val> (262) 61
    STRUCT (263) 10 11
    IF (264) 38 39
    ELSE (265) 39
    WHILE (266) 40
    RETURN (267) 41
    VOID (268)
    LP (269) 15 16 38 39 40 52 56 57
    RP (270) 15 16 17 38 39 40 52 56 57 62
    LC (271) 10 21
    RC (272) 10 21 22
    LB (273) 32 58
    RB (274) 32 33 58 63
    SEMI (275) 5 6 7 25 26 36 41 42 43
    COMMA (276) 18 27 64
    DOT (277) 55
    ASSIGNOP (278) 30 44
    AND (279) 46
    OR (280) 45
    NOT (281) 54
    PLUS (282) 48
    MINUS (283) 49 53
    STAR (284) 50
    DIV (285) 51
    UMINUS (286)
    LOWER_THAN_ELSE (287)


Nonterminals, with rules where they appear

    $accept (33)
        on left: 0
    Program <node_val> (34)
        on left: 1
        on right: 0
    ExtDefList <node_val> (35)
        on left: 2 3
        on right: 1 2
    ExtDef <node_val> (36)
        on left: 4 5 6 7
        on right: 2
    Specifier <node_val> (37)
        on left: 8 9
        on right: 4 5 6 20 25
    StructSpecifier <node_val> (38)
        on left: 10 11
        on right: 9
    OptTag <node_val> (39)
        on left: 12 13
        on right: 10
    Tag <node_val> (40)
        on left: 14
        on right: 11
    FunDec <node_val> (41)
        on left: 15 16 17
        on right: 4
    VarList <node_val> (42)
        on left: 18 19
        on right: 15 18
    ParamDec <node_val> (43)
        on left: 20
        on right: 18 19
    CompSt <node_val> (44)
        on left: 21 22
        on right: 4 37
    DefList <node_val> (45)
        on left: 23 24
        on right: 10 21 23
    Def <node_val> (46)
        on left: 25 26
        on right: 23
    DecList <node_val> (47)
        on left: 27 28
        on right: 6 25 27
    Dec <node_val> (48)
        on left: 29 30
        on right: 27 28
    VarDec <node_val> (49)
        on left: 31 32 33
        on right: 20 29 30 32
    StmtList <node_val> (50)
        on left: 34 35
        on right: 21 34
    Stmt <node_val> (51)
        on left: 36 37 38 39 40 41 42 43
        on right: 34 38 39 40
    Exp <node_val> (52)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
        on right: 30 36 38 39 40 41 44 45 46 47 48 49 50 51 52 53 54 55 58 64 65
    Args <node_val> (53)
        on left: 64 65
        on right: 56 64


State 0

    0 $accept: • Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error • SEMI

    SEMI  shift, and go to state 9


State 2

    8 Specifier: TYPE •

    $default  reduce using rule 8 (Specifier)


State 3

   10 StructSpecifier: STRUCT • OptTag LC DefList RC
   11                | STRUCT • Tag

    ID  shift, and go to state 10

    $default  reduce using rule 13 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program • $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef • ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier • FunDec CompSt
    5       | Specifier • SEMI
    6       | Specifier • DecList SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    FunDec   go to state 18
    DecList  go to state 19
    Dec      go to state 20
    VarDec   go to state 21


State 8

    9 Specifier: StructSpecifier •

    $default  reduce using rule 9 (Specifier)


State 9

    7 ExtDef: error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 10

   12 OptTag: ID •
   14 Tag: ID •

    LC        reduce using rule 12 (OptTag)
    $default  reduce using rule 14 (Tag)


State 11

   10 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 22


State 12

   11 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 11 (StructSpecifier)


State 13

    0 $accept: Program $end •

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 15

   17 FunDec: error • RP
   33 VarDec: error • RB

    RP  shift, and go to state 23
    RB  shift, and go to state 24


State 16

   15 FunDec: ID • LP VarList RP
   16       | ID • LP RP
   31 VarDec: ID •

    LP  shift, and go to state 25

    $default  reduce using rule 31 (VarDec)


State 17

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier FunDec • CompSt

    error  shift, and go to state 26
    LC     shift, and go to state 27

    CompSt  go to state 28


State 19

    6 ExtDef: Specifier DecList • SEMI

    SEMI  shift, and go to state 29


State 20

   27 DecList: Dec • COMMA DecList
   28        | Dec •

    COMMA  shift, and go to state 30

    $default  reduce using rule 28 (DecList)


State 21

   29 Dec: VarDec •
   30    | VarDec • ASSIGNOP Exp
   32 VarDec: VarDec • LB INT RB

    LB        shift, and go to state 31
    ASSIGNOP  shift, and go to state 32

    $default  reduce using rule 29 (Dec)


State 22

   10 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 24 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 35
    Def              go to state 36


State 23

   17 FunDec: error RP •

    $default  reduce using rule 17 (FunDec)


State 24

   33 VarDec: error RB •

    $default  reduce using rule 33 (VarDec)


State 25

   15 FunDec: ID LP • VarList RP
   16       | ID LP • RP

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 37

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 39
    ParamDec         go to state 40


State 26

   22 CompSt: error • RC

    RC  shift, and go to state 41


State 27

   21 CompSt: LC • DefList StmtList RC

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 24 (DefList)]
    ID      reduce using rule 24 (DefList)
    INT     reduce using rule 24 (DefList)
    FLOAT   reduce using rule 24 (DefList)
    IF      reduce using rule 24 (DefList)
    WHILE   reduce using rule 24 (DefList)
    RETURN  reduce using rule 24 (DefList)
    LP      reduce using rule 24 (DefList)
    LC      reduce using rule 24 (DefList)
    RC      reduce using rule 24 (DefList)
    SEMI    reduce using rule 24 (DefList)
    NOT     reduce using rule 24 (DefList)
    MINUS   reduce using rule 24 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 42
    Def              go to state 36


State 28

    4 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 4 (ExtDef)


State 29

    6 ExtDef: Specifier DecList SEMI •

    $default  reduce using rule 6 (ExtDef)


State 30

   27 DecList: Dec COMMA • DecList

    error  shift, and go to state 43
    ID     shift, and go to state 44

    DecList  go to state 45
    Dec      go to state 20
    VarDec   go to state 21


State 31

   32 VarDec: VarDec LB • INT RB

    INT  shift, and go to state 46


State 32

   30 Dec: VarDec ASSIGNOP • Exp

    error  shift, and go to state 47
    ID     shift, and go to state 48
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    LP     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53

    Exp  go to state 54


State 33

   26 Def: error • SEMI

    SEMI  shift, and go to state 55


State 34

   25 Def: Specifier • DecList SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 44

    DecList  go to state 56
    Dec      go to state 20
    VarDec   go to state 21


State 35

   10 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 57


State 36

   23 DefList: Def • DefList

    error   shift, and go to state 33
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 24 (DefList)]
    ID      reduce using rule 24 (DefList)
    INT     reduce using rule 24 (DefList)
    FLOAT   reduce using rule 24 (DefList)
    IF      reduce using rule 24 (DefList)
    WHILE   reduce using rule 24 (DefList)
    RETURN  reduce using rule 24 (DefList)
    LP      reduce using rule 24 (DefList)
    LC      reduce using rule 24 (DefList)
    RC      reduce using rule 24 (DefList)
    SEMI    reduce using rule 24 (DefList)
    NOT     reduce using rule 24 (DefList)
    MINUS   reduce using rule 24 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 8
    DefList          go to state 58
    Def              go to state 36


State 37

   16 FunDec: ID LP RP •

    $default  reduce using rule 16 (FunDec)


State 38

   20 ParamDec: Specifier • VarDec

    error  shift, and go to state 43
    ID     shift, and go to state 44

    VarDec  go to state 59


State 39

   15 FunDec: ID LP VarList • RP

    RP  shift, and go to state 60


State 40

   18 VarList: ParamDec • COMMA VarList
   19        | ParamDec •

    COMMA  shift, and go to state 61

    $default  reduce using rule 19 (VarList)


State 41

   22 CompSt: error RC •

    $default  reduce using rule 22 (CompSt)


State 42

   21 CompSt: LC DefList • StmtList RC

    error   shift, and go to state 62
    ID      shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    RETURN  shift, and go to state 65
    LP      shift, and go to state 51
    LC      shift, and go to state 27
    SEMI    shift, and go to state 66
    NOT     shift, and go to state 52
    MINUS   shift, and go to state 53

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 68
    Stmt      go to state 69
    Exp       go to state 70


State 43

   33 VarDec: error • RB

    RB  shift, and go to state 24


State 44

   31 VarDec: ID •

    $default  reduce using rule 31 (VarDec)


State 45

   27 DecList: Dec COMMA DecList •

    $default  reduce using rule 27 (DecList)


State 46

   32 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 71


State 47

   62 Exp: error • RP
   63    | error • RB

    RP  shift, and go to state 72
    RB  shift, and go to state 73


State 48

   56 Exp: ID • LP Args RP
   57    | ID • LP RP
   59    | ID •

    LP  shift, and go to state 74

    $default  reduce using rule 59 (Exp)


State 49

   60 Exp: INT •

    $default  reduce using rule 60 (Exp)


State 50

   61 Exp: FLOAT •

    $default  reduce using rule 61 (Exp)


State 51

   52 Exp: LP • Exp RP

    error  shift, and go to state 47
    ID     shift, and go to state 48
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    LP     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53

    Exp  go to state 75


State 52

   54 Exp: NOT • Exp

    error  shift, and go to state 47
    ID     shift, and go to state 48
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    LP     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53

    Exp  go to state 76


State 53

   53 Exp: MINUS • Exp

    error  shift, and go to state 47
    ID     shift, and go to state 48
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    LP     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53

    Exp  go to state 77


State 54

   30 Dec: VarDec ASSIGNOP Exp •
   44 Exp: Exp • ASSIGNOP Exp
   45    | Exp • OR Exp
   46    | Exp • AND Exp
   47    | Exp • RELOP Exp
   48    | Exp • PLUS Exp
   49    | Exp • MINUS Exp
   50    | Exp • STAR Exp
   51    | Exp • DIV Exp
   55    | Exp • DOT ID
   58    | Exp • LB Exp RB

    RELOP     shift, and go to state 78
    LB        shift, and go to state 79
    DOT       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87

    $default  reduce using rule 30 (Dec)


State 55

   26 Def: error SEMI •

    $default  reduce using rule 26 (Def)


State 56

   25 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 88


State 57

   10 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 10 (StructSpecifier)


State 58

   23 DefList: Def DefList •

    $default  reduce using rule 23 (DefList)


State 59

   20 ParamDec: Specifier VarDec •
   32 VarDec: VarDec • LB INT RB

    LB  shift, and go to state 31

    $default  reduce using rule 20 (ParamDec)


State 60

   15 FunDec: ID LP VarList RP •

    $default  reduce using rule 15 (FunDec)


State 61

   18 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 38
    StructSpecifier  go to state 8
    VarList          go to state 89
    ParamDec         go to state 40


State 62

   22 CompSt: error • RC
   43 Stmt: error • SEMI
   62 Exp: error • RP
   63    | error • RB

    RP    shift, and go to state 72
    RC    shift, and go to state 41
    RB    shift, and go to state 73
    SEMI  shift, and go to state 90


State 63

   38 Stmt: IF • LP Exp RP Stmt
   39     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 91


State 64

   40 Stmt: WHILE • LP Exp RP Stmt

    LP  shift, and go to state 92


State 65

   41 Stmt: RETURN • Exp SEMI

    error  shift, and go to state 47
    ID     shift, and go to state 48
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    LP     shift, and go to state 51
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53

    Exp  go to state 93


State 66

   42 Stmt: SEMI •

    $default  reduce using rule 42 (Stmt)


State 67

   37 Stmt: CompSt •

    $default  reduce using rule 37 (Stmt)


State 68

   21 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 94


State 69

   34 StmtList: Stmt • StmtList

    error   shift, and go to state 62
    ID      shift, and go to state 48
    INT     shift, and go to state 49
    FLOAT   shift, and go to state 50
    IF      shift, and go to state 63
    WHILE   shift, and go to state 64
    RETURN  shift, and go to state 65
    LP      shift, and go to state 51
    LC      shift, and go to state 27
    SEMI    shift, and go to state 66
    NOT     shift, and go to state 52
    MINUS   shift, and go to state 53

    RC  reduce using rule 35 (StmtList)

    CompSt    go to state 67
    StmtList  go to state 95
    Stmt      go to state 69
    Exp       go to state 70


State 70

   36 Stmt: Exp • SEMI
   44 Exp: Exp • ASSIGNOP Exp
   45    | Exp • OR Exp
   46    | Exp • AND Exp
   47    | Exp • RELOP Exp
   48    | Exp • PLUS Exp
   49    | Exp • MINUS Exp
   50    | Exp • STAR Exp
   51    | Exp • DIV Exp
   55    | Exp • DOT ID
   58    | Exp • LB Exp RB

    RELOP     shift, and go to state 78
    LB        shift, and go to state 79
    SEMI      shift, and go to state 96
    DOT       shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    AND       shift, and go to state 82
    OR        shift, and go to state 83
    PLUS      shift, and go to state 84
    MINUS     shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87


State 71

   32 VarDec: VarDec LB INT RB •

    $default  reduce using rule 32 (VarDec)


State 72

   62 Exp: error RP •

    $default  reduce using rule 62 (Exp)


State 73

   63 Exp: error RB •

    $default  reduce using rule 63 (Exp)


State 74

   56 Exp: ID LP • Args RP
   57    | ID LP • RP

    error  shift, and go to state 47
    ID     shift, and go to state 48
    INT    shift, and go to state 49
    FLOAT  shift, and go to state 50
    LP     shift, and go to state 51
    RP     shift, and go to state 97
    NOT    shift, and go to state 52
    MINUS  shift, and go to state 53

    Exp   go to state 98
    Args  go to state 99


State 75
